# openai-whisper-compression

./: .gitignore  LICENSE  Makefile  README.md  Untitled-2.ipynb  data_utils.py  evaluation.py  memory_tracker.py  model_utils.py  pyproject.toml  quantization.py  requirements.txt  test.py
openai-whisper-compression/: .editorconfig  .pre-commit-config.yaml
openai-whisper-compression/notebooks/: workbench.ipynb
openai-whisper-compression/tests/: test_foo.py
openai_whisper_compression/: config.py  data.py  utils.py
pruning/: attention_head_pruning.py  base_test.py  bias.py  biases.py  cross_attn_decoder.py  decoder.py  encoder.py  experimental_pruning.py  experimental_pruning_v2.py  ffns_encoder.py  final_output_projection.py  final_pruning.py  first_last_layers.py  gradient_sensitivity_test.py  hessian_sensitivity_test.py  layer_pruning.py  random_pruning  random_pruning.py  random_pruning_mac_test.py  self_attn_decoder.py  self_attn_encoder.py  sensitivity_test.py  structured_L2.py  structured_L2_baseline.py  unstructured_L1.py
pruning+quantization/: bnb_implementation.py  pruning_quantization_all.py  pytorch_implementation.py  quanto_implementation.py
pruning/baseline_scripts/: unstructured_L1_baseline.py
pruning/final_pruning_script/: final_pruning.py  global_final_pruning.py  global_storing_as sparse.py  gzip_storage.py  loading_sparse_model.py  numpy_only_storing.py  pruning_and_storing_as_sparse.py
pruning/layer_analysis_scripts/: first_last_layers.py
pruning/sensitivity_tests_scripts/: architecture_analysis.py  gradient_sensitivity_test.py  hessian_sensitivity_test.py
pruning/targeted_component_scripts/: bias.py  conv_layers.py  cross_attn_decoder.py  ffns_decoder.py  layer_norm.py  positional_embeddings.py  token_embeddings.py  token_positional_embeddings.py
pruning/whisper_sensitivity_results/whisper_sensitivity_20250327_171334/: layer_importance.json  model_info.json  parameter_importance.json
quantization/evaluation_scripts/: baseline_evaluation.py  bitsandbytes-test.py  dynamic_evaluation.py  dynamic_evaluation_int2.py  dynamic_evaluation_pytorch.py  evaluation_all.py  evaluation_dynamic.py  static_quantization.py
quantization/notebooks/: baseline evaluation and EDA.ipynb
